# ffigen

./: .gitignore  .travis.yml  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  analysis_options.yaml  build.sh  ffigen.schema.json  pubspec.yaml
.github/workflows/: test-package.yml
example/: README.md  gen.dart  pubspec.yaml
example/c_json/: .gitignore  README.md  cjson_generated_bindings.dart  config.yaml  constants.dart  example.json  main.dart  out.txt  pubspec.yaml
example/ffinative/: README.md  config.yaml  generated_bindings.dart  pubspec.yaml
example/headers/: example.h
example/libclang-example/: config.yaml  custom_import.dart  ffigen.yaml  gen.dart  generated_bindings.dart  out.txt  pubspec.yaml  readme.md
example/objective_c/: README.md  avf_audio.dart  avf_audio_bindings.dart  config.yaml  play_audio.dart  pubspec.yaml
example/pedometer/: .metadata  README.md  pubspec.yaml
example/shared_bindings/: README.md  generate.dart  pubspec.yaml  run.sh
example/simple/: README.md  config.yaml  generated_bindings.dart  pubspec.yaml
example/swift/: Modules  Modules.abi.json  Modules.swiftdoc  Modules.swiftsourceinfo  README.md  config.yaml  example.dart  (+14 more)
lib/: ffigen.dart  wasmjsgen.dart
test/: README.md  code_generator_test.dart  regen.dart  setup.dart  test_coverage.dart  test_utils.dart
tool/: coverage.sh  generate_json_schema.dart  libclang_binding_generator.dart  libclang_config.yaml  travis.sh
tool/wrapped_libclang/: .gitignore  CMakeLists.txt  build.dart  build_dylib_linux.sh  build_dylib_macos.sh  build_dylib_windows.bat  wrapper.c  wrapper.def
(+321 files in other folders)
